sonar quality improvements, renamed long class names